cabal-version:      2.4
name:               hopper
version:            0.1.0.0
synopsis:           Data parser for Minecraft

homepage:           https://github.com/typecraftio

license:            MIT
license-file:       LICENSE
author:             Junhyung Im <entrypointkr@gmail.com>
maintainer:         Junhyung Im <entrypointkr@gmail.com>

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Data.Hopper, Data.Hopper.AssetHeader

    -- other-modules:

    -- other-extensions:
    build-depends:
        base == 4.14.1.0,
        aeson == 1.5.6.0,
        containers == 0.6.2.1,
        unordered-containers == 0.2.13.0,
        text == 1.2.3.2,
        filepath == 1.4.2.1,
        bytestring == 0.10.12.0,
        directory == 1.3.6.0,
        async == 2.2.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable hopper
    main-is:          Main.hs

    -- other-modules:

    -- other-extensions:
    build-depends:
        hopper,
        base == 4.14.1.0,
        containers == 0.6.2.1,
        unordered-containers == 0.2.13.0,
        aeson == 1.5.6.0,
        bytestring == 0.10.12.0,
        directory == 1.3.6.0,
        filepath == 1.4.2.1,
        time == 1.9.3
    hs-source-dirs:   app
    default-language: Haskell2010
